# cppimagefilterbase

./: CMakeLists.txt  ListFilters.cpp  ListFilters.h  abstract_filter.h  blur_filter.cpp  blur_filter.h  bw_filter.cpp  bw_filter.h  config_parsing.cpp  config_parsing.h  config_reader.cpp  config_reader.h  edge_filter.cpp  edge_filter.h  filter_list.cpp  filter_list.h  main.cpp  png_filter.cpp  png_filter.h  png_toolkit.cpp  png_toolkit.h  red_filter.cpp  red_filter.h  support_filters.cpp  support_filters.h  threshold_filter.cpp  threshold_filter.h
